Bug 508402 - Dolphin creates numerous empty temporary files when browsing to /tmp
Summary: Dolphin creates numerous empty temporary files when browsing to /tmp
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.07.90
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 512897 513225 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-08-18 02:18 UTC by Nicholas
Modified: 2026-01-12 13:22 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12.1
Sentry Crash Report:


Attachments
Video showing the problem (520.46 KB, video/webm)
2025-08-18 02:18 UTC, Nicholas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas 2025-08-18 02:18:10 UTC
Created attachment 184198 [details]
Video showing the problem

SUMMARY
When browsing to /tmp, dolphin creates numerous empty temporary files.

STEPS TO REPRODUCE
1.  Open dolphin to /tmp
2. Watch numerous temporary files populate the /tmp directory

OBSERVED RESULT
Temporary files fill up the /tmp directory.

EXPECTED RESULT
Temporary dolphin files should not fill up the /tmp directory :-)

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.15.9-201.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 1 Kishore 2025-08-21 12:21:58 UTC
This is also happening in the current user neon install. The issue if further amplified by the fact that these files are not deleted even after dolphin is closed.
Comment 2 Akseli Lahtinen 2025-08-28 13:11:30 UTC
I can't reproduce the bug

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Kernel Version: 6.15.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 3 messius58 2025-09-22 08:30:55 UTC
This is also happening on Fedora 43 Beta.

Operating System: Fedora Linux 43
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.17.0-0.rc6.49.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 4 Yugami 2025-09-22 17:36:47 UTC
This is also happening on CachyOS

OS: CachyOS x86_64
Kernel: Linux 6.16.7-2-cachyos
DE: KDE Plasma 6.4.5
WM: KWin (Wayland)
CPU: Intel(R) Core(TM) i5-4460 (4) @ 3.40 GHz
GPU 1: AMD Radeon RX 6700 XT [Discrete]
GPU 2: Intel Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller @ 1.10 GHz [Integrated]
Locale: en_US.UTF-8

Operating System: CachyOS Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.7-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-4460  CPU @ 3.20GHz
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor 1: AMD Radeon RX 6700 XT
Graphics Processor 2: Intel® HD Graphics 4600
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: H97M-D3H
Comment 5 Martin Schnitkemper 2025-09-24 09:45:30 UTC
This behavior always occurs when the sort order in the file list is changed via the column headers. For example, if you change the sort order from "Name" to "Modified," a file is created in /tmp. It's not an empty file, but rather a configuration file with the [Dolphin] and [Settings] sections.
Comment 6 Akseli Lahtinen 2025-09-25 09:31:49 UTC
(In reply to Martin Schnitkemper from comment #5)
> This behavior always occurs when the sort order in the file list is changed
> via the column headers. For example, if you change the sort order from
> "Name" to "Modified," a file is created in /tmp. It's not an empty file, but
> rather a configuration file with the [Dolphin] and [Settings] sections.

Oh hey, you're spot on. I can reproduce this now. Thanks for clarifying!

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 7 taocris 2025-10-02 14:12:33 UTC
Reproduced on Fedora 42 KDE Plasma.

Empty /tmp/dolphin.XXXXXX files are randomly created when I open dolphin or change directory in dolphin. These files are seemingly never removed.

Browsing to /tmp will spawn these files continuously, but it's reproducible on any folder that keeps generating new files.
Point dolphin to a folder, run a script like:

while true; do
  touch ${the_folder}/`uuidgen`
  sleep 1
done

, and run `watch -n1 ls -lht /tmp` in terminal to watch /tmp getting filled.

---
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 12th Gen Intel® Core™ i7-12700F
Memory: 16 GiB of RAM (15.3 GiB usable)
Graphics Processor: AMD Radeon Graphics 9060 XT
Comment 8 Martin Schnitkemper 2025-10-05 12:39:19 UTC
A similar problem also occurs with the system monitor. When you open it, a zero-length plasma-systemmonitor.XXXXXX file is created in /tmp for each view. After exiting, it is filled into a file with the contents of the *.page files.

If two different applications exhibit similar behavior, it may not be Dolphin's fault, but rather a shared component.
Comment 9 Tameq 2025-11-12 03:05:07 UTC
I discovered the same thing. When opening the /tmp folder, files with the name dolphin.XXXXXX start to spawn infinitely. I monitored it using "inotifywait -m -e create --format '%w%f' /tmp". Kubuntu 25.10, Plasma 6.4.5, Dolphin 25.08.1. The same behavior occurs in KdeNeon, Plasma 6.5.1, as well as Fedora 43. However, in Debian 13 and Plasma 6.3, this does not happen. In general, the creation of a couple of temporary files occurs when opening/creating a folder/file (which seems excessive, to be honest) and, apparently, when opening the /tmp folder, it enters an endless loop.
Comment 10 Bug Janitor Service 2025-11-13 13:51:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1099
Comment 11 kokochu 2025-11-30 03:06:33 UTC
https://discuss.kde.org/t/dolphin-creating-thousands-of-empty-folders-in-tmp/41065/2

Similar bug and one of the KDE devs responses was that users shouldn't be accessing /tmp/ - riiiiight.

Not a great look.
Comment 12 kokochu 2025-11-30 09:16:58 UTC
This is happening on one system which is a VM but it doesn't happen on the host machine, or my other physical machine. They are all running the same version of everything. The only main difference is the VM doesn't have a swap partition.

Dolphin Version 25.08.3
Operating System: EndeavourOS 
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6500T CPU @ 2.50GHz
Memory: 32 GiB of RAM (31.2 GiB usable)
Graphics Processor: Mesa Intel® HD Graphics 530
Comment 13 John 2025-11-30 10:01:53 UTC
Reproduced after clicking on the Modified column to sort it, on Debian 14 with Plasma 6.5.3.
Comment 14 kokochu 2025-11-30 11:38:07 UTC
(In reply to John from comment #13)
> Reproduced after clicking on the Modified column to sort it, on Debian 14
> with Plasma 6.5.3.

For me that only creates one file each time I click Modified column. This is just creating a prefs file. The actual symptom is it gets stuck in a loop creating a new file every second or so by doing nothing other than viewing /tmp/ with no interaction from the user.
Comment 15 TraceyC 2025-12-04 00:30:32 UTC
*** Bug 510500 has been marked as a duplicate of this bug. ***
Comment 16 TraceyC 2025-12-04 00:30:41 UTC
I'm able to reproduce this with Dolphin built from git-master on Solus just by having the terminal pane open and browsing to /tmp
Comment 17 TraceyC 2025-12-04 00:31:50 UTC
*** Bug 512897 has been marked as a duplicate of this bug. ***
Comment 18 Bug Janitor Service 2025-12-24 15:53:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1134
Comment 19 aristsakas 2025-12-25 15:28:05 UTC
*** Bug 513225 has been marked as a duplicate of this bug. ***
Comment 20 Méven 2025-12-26 10:40:20 UTC
Git commit 770481f0d2698bdebcb472b9ca150f374e567a62 by Méven Car, on behalf of Sergey Katunin.
Committed on 26/12/2025 at 10:32.
Pushed by meven into branch 'master'.

dolphinview: do not get view properties if we do not apply dynamic view

If we have return early because dynamic view is not enabled
or we have Icon View already, then do not try to load view
properties to get 'dynamicViewPassed' property.

Otherwise, for example, it infinitely calls
the ViewProperties::save() method for the /tmp folder,
which generates a bunch of temporary files
(on new user, if dynamic view is not enabled
and Icon View applied by default)

M  +6    -2    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/770481f0d2698bdebcb472b9ca150f374e567a62
Comment 21 Méven 2025-12-26 11:38:49 UTC
Git commit 23e4274a987766312483f444d865fa23623132d0 by Méven Car.
Committed on 26/12/2025 at 11:28.
Pushed by meven into branch 'release/25.12'.

dolphinview: do not get view properties if we do not apply dynamic view

If we have return early because dynamic view is not enabled
or we have Icon View already, then do not try to load view
properties to get 'dynamicViewPassed' property.

Otherwise, for example, it infinitely calls
the ViewProperties::save() method for the /tmp folder,
which generates a bunch of temporary files
(on new user, if dynamic view is not enabled
and Icon View applied by default)


(cherry picked from commit 770481f0d2698bdebcb472b9ca150f374e567a62)

Co-authored-by: Sergey Katunin <sulmpx60@yandex.ru>

M  +6    -2    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/23e4274a987766312483f444d865fa23623132d0
Comment 22 Christoph Feck 2025-12-30 22:02:32 UTC
Running 5cb5407d from master, temporary files are still created and not deleted on exit.

The commit message says something about a "new user". Does that mean I need to remove a state file from my home directory?
Comment 23 Christoph Feck 2026-01-12 13:22:46 UTC
Commit for bug 510500 fixed this.